add docs structure

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37,flake8
+envlist = py37,flake8,docs
 
 [testenv]
 passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
@@ -16,4 +16,12 @@ commands =
 commands = flake8 lair
 deps =
     flake8
+
+[testenv:docs]
+basepython=python
+deps =
+    -rrequirements.txt
+    sphinx
+commands=
+    sphinx-build -W -b html docs/source docs/build
 
