--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
 include requirements.txt
 include README.rst
 recursive-include lair *.ini
+recursive-include docs *.rst *.png *.svg *.css *.html conf.py
+prune docs/build/*
 
