--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 deps = pytest
        pytest-cov
        coveralls
+       pyfakefs
        -rrequirements.txt
 
 commands =
