add crossorigin decorator

--- a/tox.ini
+++ b/tox.ini
@@ -3,10 +3,7 @@ envlist = py37,flake8,docs
 
 [testenv]
 passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
-deps = pytest
-       pytest-cov
-       coveralls
-       pyfakefs
+deps = -rtest-requirements.txt
        -rrequirements.txt
 
 commands =
